--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@element-plus/icons-vue": "^2.0.4",
     "@svgdotjs/svg.js": "^3.1.2",
     "axios": "^0.27.2",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.2",
     "path": "^0.12.7",
     "unplugin-icons": "^0.14.3",
     "vite-plugin-inspect": "^0.5.0",
     "vue": "^3.2.25",
+    "vue-echarts": "^6.1.0",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
   },
