--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,11 @@
 server {
 listen 80;
-server_name 120.48.95.56; 
+server_name localhost;
   
 location / {
 root /usr/share/nginx/html;
 index index.html index.htm;
+add_header Access-Control-Allow-Origin *;
 try_files $uri $uri/ /index.html =404;
 }
   
